--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,19 @@ android {
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            storeFile file('D:/projects/ANDROID/AS/KeyStore')
+            storePassword "ofghjdthbv"
+            keyAlias "restikkz_a"
+            keyPassword "ofghjdthbv"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -28,13 +37,11 @@ def fbCore = '16.0.3'
 def fbCloudMessaging = '17.3.0'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$support"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
     implementation "com.google.firebase:firebase-core:$fbCore"
     implementation "com.google.firebase:firebase-messaging:$fbCloudMessaging"
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
